cmake_minimum_required(VERSION 3.10)
project(timus_cpp)

set(CMAKE_CXX_STANDARD 17)

#add_executable(timus_cpp task_1000.cpp)
#add_executable(timus_cpp task_1001.cpp)
#add_executable(timus_cpp task_1293.cpp)
#add_executable(timus_cpp task_1785.cpp)
#add_executable(timus_cpp task_2012.cpp)

#add_executable(timus_cpp task_1409.cpp)
#add_executable(timus_cpp task_1877.cpp)
#add_executable(timus_cpp task_2001.cpp)
#add_executable(timus_cpp task_1264.cpp)
#add_executable(timus_cpp task_1787.cpp)

#add_executable(timus_cpp task_1820.cpp)
#add_executable(timus_cpp task_1197.cpp)
#add_executable(timus_cpp task_2066.cpp)
#add_executable(timus_cpp task_1880.cpp)
#add_executable(timus_cpp task_1639.cpp)

#add_executable(timus_cpp task_1910.cpp)
#add_executable(timus_cpp task_1924.cpp)
#add_executable(timus_cpp task_2023.cpp)
#add_executable(timus_cpp task_2100.cpp)
#add_executable(timus_cpp task_2109.cpp)

#add_executable(timus_cpp task_1313.cpp)
#add_executable(timus_cpp task_1068.cpp)
#add_executable(timus_cpp task_1225.cpp)
#add_executable(timus_cpp task_1319.cpp)
#add_executable(timus_cpp task_1567.cpp)

#add_executable(timus_cpp task_1581.cpp)
#add_executable(timus_cpp task_1585.cpp)
#add_executable(timus_cpp task_1263.cpp)
#add_executable(timus_cpp task_1991.cpp)
#add_executable(timus_cpp task_1100.cpp)

# homework 08
#add_executable(timus_cpp task_1545.cpp)
#add_executable(timus_cpp task_1496.cpp)
add_executable(timus_cpp task_1196.cpp)
#add_executable(timus_cpp task_1837.cpp)
